--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-vite-ts",
+  "name": "react-vite-ts-with-zephyr",
   "private": true,
   "version": "0.0.0",
   "type": "module",
